# TraceExplorer

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml
src/: config.py
src/analysis/: __init__.py  models.py  utils.py
src/cli/: __init__.py
src/definitions/: tags.py
src/parsers/: __init__.py  opentracing.py
src/queries/: __init__.py  elasticsearch_helper.py
src/reports/: html.py
src/reports/templates/: base.html  spans.html  szenarios.html
src/rules/: parser.py
src/schemas/: schema.json
src/testsuite/: csv.py
src/trace_explorer/: config.py
src/trace_explorer/analysis/: __init__.py  clock_skew.py  models.py  rca.py  utils.py
src/trace_explorer/cli/: __init__.py
src/trace_explorer/definitions/: logs.py  span.py
src/trace_explorer/parsers/: __init__.py  opentelemetry.py  opentracing.py
src/trace_explorer/queries/: __init__.py  elasticsearch_helper.py  jaegery_query_helper.py
src/trace_explorer/reports/: html.py
src/trace_explorer/rules/: parser.py
src/trace_explorer/testsuite/: base.py  csv.py
src/trace_explorer/web/: app.py  forms.py  settings.py  utils.py  web.py
src/tracing_rca/: __init__.py  config.py
src/tracing_rca/analysis/: models.py  rca.py  utils.py
src/tracing_rca/cli/: __init__.py
src/tracing_rca/definitions/: http.py
src/tracing_rca/parsers/: __init__.py  opentracing.py
src/tracing_rca/queries/: __init__.py  elasticsearch_helper.py
tests/: test_analysis.py  test_child_of.json  test_circular.json  test_follows_from.json
(+18 files in other folders)
