[metadata]
name = trace_explorer_rsinner99
version = 0.0.1
author = Robin Sinner
author_email = robin.sinner@t-online.de
description = Analyzing distributed traces
long_description = file: README:md
long_description_content_type = text/markdown
url = https://github.com/rsinner99/TracingRCA
project_urls = 
    Bug Tracker = https://github.com/rsinner99/TracingRCA/issues
classifiers = 
    Programming Language :: Python :: 3
    Operation System :: OS Independent

[options]
include_package_data=True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    jinja2
    elasticsearch
    jsonschema

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    TraceExplorer = trace_explorer.cli:main
